--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,106 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<base href="/">
-	<title>Angular With Webpack</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-<my-app>Loading...</my-app>
-</body>
+	<head>
+
+		<!-- base tags -->
+		<base href="/">
+		<title>Webpack 3 with Angular 5</title>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<!-- Facebook OpenGraph meta tags -->
+		<meta property="og:title" content="Webpack 3 with Angular 5" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="http://example.com" />
+		<meta property="og:image" content="https://example.com/images/angular.png" />
+
+		<!-- Additional twitter meta tags -->
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:site" content="@aiwha" />
+		<meta name="twitter:creator" content="@aiwha" />
+
+		<!-- Main inline style to show browser a nice loader -->
+		<style type="text/css">
+			* {
+				font-family: 'Barlow Condensed', sans-serif;
+			}
+
+			.app-loading-splash {
+				align-items: center;
+				animation: fadeOutToNone 0.5s ease-out;
+				background-color: #ffffff;
+				background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='18' viewBox='0 0 100 18'%3E%3Cpath fill='%23a1a1a1' fill-opacity='0.39' d='M61.82 18c3.47-1.45 6.86-3.78 11.3-7.34C78 6.76 80.34 5.1 83.87 3.42 88.56 1.16 93.75 0 100 0v6.16C98.76 6.05 97.43 6 96 6c-9.59 0-14.23 2.23-23.13 9.34-1.28 1.03-2.39 1.9-3.4 2.66h-7.65zm-23.64 0H22.52c-1-.76-2.1-1.63-3.4-2.66C11.57 9.3 7.08 6.78 0 6.16V0c6.25 0 11.44 1.16 16.14 3.42 3.53 1.7 5.87 3.35 10.73 7.24 4.45 3.56 7.84 5.9 11.31 7.34zM61.82 0h7.66a39.57 39.57 0 0 1-7.34 4.58C57.44 6.84 52.25 8 46 8S34.56 6.84 29.86 4.58A39.57 39.57 0 0 1 22.52 0h15.66C41.65 1.44 45.21 2 50 2c4.8 0 8.35-.56 11.82-2z'%3E%3C/path%3E%3C/svg%3E");
+				bottom: 0;
+				display: none;
+				height: 100%;
+				justify-content: center;
+				left: 0;
+				opacity: 0;
+				position: fixed;
+				right: 0;
+				top: 0;
+				width: 100%;
+			}
+
+			my-app:empty + .app-loading-splash {
+				animation: fadeInFromNone 0.5s ease-out;
+				display: flex;
+				opacity: 1;
+			}
+
+			.app-loading-splash__text {
+				align-items: center;
+				bottom: 0;
+				display: flex;
+				height: 100%;
+				justify-content: center;
+				left: 0;
+				position: fixed;
+				right: 0;
+				top: 0;
+				width: 100%;
+			}
+
+			@keyframes fadeOutToNone {
+				0% {
+					display: flex;
+					opacity: 1;
+				}
+
+				1% {
+					display: flex;
+					opacity: 0;
+				}
+
+				100% {
+					display: none;
+					opacity: 0;
+				}
+			}
+
+			@keyframes fadeInFromNone {
+				0% {
+					display: none;
+					opacity: 0;
+				}
+
+				1% {
+					display: flex;
+					opacity: 0;
+				}
+
+				100% {
+					display: flex;
+					opacity: 1;
+				}
+			}
+		</style>
+	</head>
+	<body>
+		<my-app></my-app>
+		<div class="app-loading-splash">
+			<div class="app-loading-splash__text">Loading</div>
+			<img src='/images/loader.min.svg' />
+		</div>
+	</body>
 </html>
